--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -21,9 +21,10 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi  
       - name: Lint with Ruff  
         run: |  
-          pip install ruff  
-          ruff --format=github --target-version=py310 .  
-        continue-on-error: true  
+          ruff --output-format=github --target-version=py310
+      - name: Check code formatting with Ruff
+        run: ruff format --diff --target-version=py310
+        continue-on-error: true
       - name: Test with pytest  
         run: |  
           coverage run -m pytest  -v -s  
