--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -21,7 +21,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi  
       - name: Lint with Ruff  
         run: |  
-          ruff --output-format=github --target-version=py310
+          ruff check --output-format=github --target-version=py310
       - name: Check code formatting with Ruff
         run: ruff format --diff --target-version=py310
         continue-on-error: true
